# SimpleSVC

./: .gitignore  CMakeLists.txt  get_prev_commits3.c  main.c  svc.c  svc.h  test1.c  test1_0.c  test2.c  test_print_commit_3.c  test_svc_checkout1.c  test_svc_rm1.c  test_svc_rm3.c  testcases.h
